--- a/ems/src/app/dashboard/support/support.component.html
+++ b/ems/src/app/dashboard/support/support.component.html
@@ -95,7 +95,7 @@
      <td>Project manager</td>
      <td>1234567890</td>
      <td>Software</td>
-     <td> <button> Edit</button><button>Delete</button></td>
+     <td> <mat-icon>create</mat-icon><mat-icon>delete_forever</mat-icon></td>
     </tr>
     <tr>
      <th scope="row">2</th>
@@ -103,7 +103,7 @@
      <td>Team member</td>
      <td>12345677890</td>
      <td>Software</td>
-     <td> <button> Edit</button><button>Delete</button></td>
+     <td> <mat-icon>create</mat-icon><mat-icon>delete_forever</mat-icon></td>
     </tr>
     <tr>
      <th scope="row">3</th>
@@ -111,7 +111,7 @@
      <td>Team member</td>
      <td>1234567890</td>
      <td>Software</td>
-     <td> <button> Edit</button><button>Delete</button></td>
+     <td> <mat-icon>create</mat-icon><mat-icon>delete_forever</mat-icon></td>
     </tr>
    </tbody>
   </table>
