--- a/ems/src/app/dashboard/profile/profile.component.html
+++ b/ems/src/app/dashboard/profile/profile.component.html
@@ -107,7 +107,7 @@
             >
               Submit
             </button>
-            <button type="button" class="btn btn-danger" (click)="reseter()">
+            <button  class="btn btn-danger" (click)="reseter()">
               Reset
             </button>
         </div>
