--- a/ems/src/app/dashboard/support/support.component.css
+++ b/ems/src/app/dashboard/support/support.component.css
@@ -1,7 +1,7 @@
-.pro{
+.Professional{
  padding: 30px;
  margin: 10px;
- background-color: azure;
+ background-color: rgb(240, 255, 255);
 }
 .but{
  margin-left: 1400px;
