--- a/ems/src/app/dashboard/support/support.component.html
+++ b/ems/src/app/dashboard/support/support.component.html
@@ -1,4 +1,4 @@
-<div class="pro">
+<div class="Professional">
  <div class="aaa" style=" margin-left: 15px; margin-top: -10px;">
   <mat-icon> business</mat-icon>
   <div style="margin-left: 45px;
