--- a/ems/src/app/dashboard/profile/profile.component.css
+++ b/ems/src/app/dashboard/profile/profile.component.css
@@ -19,3 +19,20 @@
 .inp{
     width: 20rem;
 }
+.Professional{
+    padding: 30px;
+    margin: 10px;
+   }
+   .but{
+    margin-left: 1400px;
+    }
+    .form-group{
+   padding: 10px;
+   margin: 5px;
+    }
+     .aaa{
+      font-style: inherit;
+      /* margin-left: 15px;
+      margin-top: 10px; */
+     }
+   
