--- a/ems/src/app/dashboard/profile/profile.component.css
+++ b/ems/src/app/dashboard/profile/profile.component.css
@@ -35,4 +35,14 @@
       /* margin-left: 15px;
       margin-top: 10px; */
      }
-   
+#new{
+  padding-left:20px;
+}
+#forms{
+  font-weight:500;
+}
+.rad{
+  font-size:16px;
+  font-weight: 400;
+  margin-right: 1rem;
+}
