--- a/ems/src/app/dashboard/support/support.component.html
+++ b/ems/src/app/dashboard/support/support.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="add" style="margin-left: 960px;     margin-top: -5px;">
-    <mat-icon>add_box</mat-icon>
+    <mat-icon >add_box</mat-icon>
     <div style="margin-top: -27px;
   margin-left: 30px;">Add</div>
   </div>  
@@ -166,10 +166,10 @@
 
 <!-- Rough work -->
 
-<div >
+<!-- <div >
 Name : <input type="text" placeholder="name" formControlName="name"><br><br><br>
 DOB : <input type="text" placeholder="dob" formControlName="dob"><br><br><br>
 Email : <input type="text" placeholder="email" formControlName="email"><br><br><br>
 Contact No : <input type="text" placeholder="contact no" formControlName="contactno"><br><br><br>
 Place : <input type="text" placeholder="place" formControlName="place"><br><br><br>
-</div>
+</div> -->
