--- a/ems/src/app/dashboard/profile/profile.component.css
+++ b/ems/src/app/dashboard/profile/profile.component.css
@@ -42,3 +42,12 @@
   font-weight: 400;
   margin-right: 1rem;
 }
+/* .alert{
+  width: 300px;
+  height: 30px;
+  padding: 3px;
+  margin-top: 5px;
+} */
+.errors{
+  color: red;
+}
