--- a/ems/src/app/app.component.html
+++ b/ems/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <router-outlet></router-outlet> -->
-<!-- <app-support></app-support> -->
+<app-support></app-support>
 <app-profile></app-profile>
